# home

./: .ajd.zsh-theme  .bashrc  .emacs  .gitignore  .profile.ps1  .zshrc  README
.attic/: .bashrc  README
.attic/code/.scripts/: thirdparty.py
.attic/code/ajd/: .gitignore  SConstruct
.attic/code/ajd/explore/main/include/: executor.h
.attic/code/misc/: sieve.erl  sieve.hrl
.attic/gaember/: .travis.yml  index.html  sync.html
.attic/gaember/assets/css/: ajdweb.css  bootstrap.min.css  code.css
.attic/gaember/assets/js/: ajdweb.js
.attic/gaember/assets/js/libs/: ember.js  ember.min.js  handlebars.js  highlight.js  ie-cors.js  jquery.js  marked.js  moment.js
.attic/gaember/backend/: app.yaml  gae.json  paste.json  pip-freeze  test.json
.attic/gaember/backend/ajdweb/: __init__.py  __main__.py  datastore.py  filesystem.py  gae.py  gaestore.py  github.py  handlers.py  redistore.py  views.py
.attic/gaember/backend/ajdweb/templates/: base  page  tag
.attic/gaember/backend/ajdweb/test/: .dir-locals.el  __init__.py  datastore.py  github.py  handlers.py
.attic/gaember/backend/ajdweb/test/data/bar/: page.txt  root.txt
.attic/gaember/backend/ajdweb/test/data/bar/subbar/: birthday.txt  tagged.txt
.attic/gaember/backend/ajdweb/test/data/foo/: page.txt  root.txt
.attic/gaember/backend/ajdweb/test/data/foo/subfoo/: nocontent.txt  nosummary.txt  root.txt
.attic/gaember/backend/ajdweb/test/data/foo/subfoo/subsubfoo/: page.txt  root.txt
.attic/gaember/content/: .dir-locals.el
.attic/gaember/content/tech/: root.txt  self-portrait.txt
.attic/gaember/content/tech/c++/: langsupport.md  root.txt
.attic/web/: .gitignore
.attic/web/ajdweb/dynamic/: __init__.py  github.py  handlers.py  sqldb.py
.attic/web/ajdweb/dynamic/templates/: index  page
.attic/web/ajdweb/dynamic/test/: __init__.py  database.py  repository.py  smoke.py
.attic/web/ajdweb/static/css/: print.css
.attic/web/html/tech/: c_calls.html  emacs_devanagari.html  tls_ciphers.html
.attic/web/pages/tech/: do_privileged.org  tls_ciphers.org
.elisp/: PythonTidy.py  ajd-org.el  batch-mode.el  graphviz-dot-mode.el  markdown-mode.el  p4.el  powershell-mode.el  python-tidy.py  virtualenv.el  yaml-mode.el
.elisp/jsbeautifier/: __init__.py
code/: License.txt
code/.scripts/: buildEnvironment.py
code/ajd/explore/: SConscript
code/ajd/explore/test/src/: esft_test.cc  executor_test.cc  shared_ptr_test.cc
code/c++/: .dir-locals.el  CMakeLists.txt  Makefile
code/c++/boost/: CMakeLists.txt  coro_samefringe.cpp  executor.h
code/c++/c++11/: CMakeLists.txt  scratch.cpp  thread.cpp
code/c++/crypto/: CMakeLists.txt  README.md  crypto.cpp  crypto.h  vectors.cpp
code/c++/executor/: CMakeLists.txt  executor.cpp  executor.h
code/c++/misc/: CMakeLists.txt  tree.cpp  tree.h
code/java/: pom.xml
code/java/spring/: pom.xml
code/java/spring/quartz/: pom.xml
code/java/spring/quartz/src/test/java/co/aldrin/spring/quartz/: NonsenseJob.java  SchedulerTest.java
code/java/spring/quartz/src/test/resources/: scheduler-test.xml
code/misc/: ca.py  choose_tls_ciphers.py
notes/crypto/: 2.py  4.py  crypto_course.txt
web/: .dir-locals.el  .gitignore  README  app.yaml
web/ajdweb/: __init__.py  app.yaml  appengine.py  backends.py  database.py  github.py  handlers.py
web/ajdweb/dynamic/: backends.py  lib  localgit.py  sqldb.py
web/ajdweb/dynamic/templates/: base  index
web/ajdweb/dynamic/test/: __init__.py  appengine.py  localgit.py  smoke.py
web/ajdweb/src/: app.yaml
web/ajdweb/src/dynamic/: __init__.py  appengine.py  backends.py
web/ajdweb/src/dynamic/templates/: index
web/ajdweb/src/dynamic/test/: __init__.py  github.py  smoke.py
web/ajdweb/static/css/: base.css  style.css  style.less
web/ajdweb/static/js/: ajdweb.js
web/ajdweb/templates/: base  index  page  page.html
web/ajdweb/test/: __init__.py  appengine.py  github.py
web/code/c++/: .dir-locals.el  CMakeLists.txt
web/code/c++/boost/: CMakeLists.txt  executor.cpp
web/code/c++/c++11/: CMakeLists.txt  langsupport.cpp
web/code/c++/crypto/: CMakeLists.txt  crypto.cpp  crypto.h
web/html/: asio_executor.html  c_calls.html  do_privileged.html  emacs_devanagari.html  esft.html  start_erlang.html  tls_ciphers.html
web/html/tech/: asio_executor.html  do_privileged.html  esft.html  start_erlang.html  tls_ciphers.html
web/pages/: .dir-locals.el  c_calls.org  emacs_devanagari.org  esft.org  start_erlang.org  tls_ciphers.org
web/pages/tech/: asio_executor.md  asio_executor.org  crypto_primitives.md  do_privileged.org  start_erlang.org
web/pages/tech/c++/: asio_executor.md
web/tech/: asio_executor.md  coroutines.md  coroutines.txt  crypto.md  do_privileged.md  samefringe.dot
