PROJECT(Crypto)

FIND_PACKAGE(OpenSSL)
IF(OPENSSL_FOUND)
  INCLUDE_DIRECTORIES(${OPENSSL_INCLUDE_DIR})
ENDIF()

IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
  SET(CMAKE_CXX_FLAGS "--std=c++11 --stdlib=libc++")
ENDIF()

IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  SET(CMAKE_CXX_FLAGS "--std=c++0x")
ENDIF()




SET(FEATURES crypto)

FOREACH(feature ${FEATURES})
  ADD_EXECUTABLE(${feature} ${feature}.cpp)
  TARGET_LINK_LIBRARIES(${feature} ${OPENSSL_LIBRARIES})
  ADD_TEST(${feature}_test ${feature})
ENDFOREACH()
